# LoRa-SDR-Lightweight-Standalone-Library-

./: .gitignore  .gitmodules  API_SPEC.md  CMakeLists.txt  PORTING_NOTES.md  README.md  README_LoRaSDR_porting.md  README_TESTING.md  SEMANTIC_COMPATIBILITY.md  TEST_PLAN.md  THIRD_PARTY.md  TestDetector.cpp  alloc_report.txt  test_output.iq
include/lora_phy/: ChirpGenerator.hpp  LoRaCodes.hpp  LoRaDetector.hpp  kissfft.hh  phy.hpp
include/lorawan/: lorawan.hpp
legacy/: LoRaDecoder.cpp  LoRaDemod.cpp  LoRaEncoder.cpp  LoRaMod.cpp  TestCodesSx.cpp  TestDetector.cpp  TestHamming.cpp  TestLoopback.cpp  kissfft.hh
legacy_vectors/lorasdr_baseline/: .gitignore  iq_norm.cfloat.b64  placeholder.txt.b64
logs/: performance.csv  performance_run1.csv  performance_run2.csv
runners/: comprehensive_vector_generate.cpp  lora_phy_vector_dump.cpp  lora_phy_vector_generate.cpp  lorawan_roundtrip.cpp  rx_runner.cpp  tx_runner.cpp
scripts/: advanced_lora_analysis.py  analyze_decoded_message.py  analyze_unknown_file.py  compare_perf.py  compare_vectors.py  comprehensive_lora_lightweight_tests.py  create_binary_vectors.py  create_clean_repo.py  create_optimized_golden_vectors.py  decode_lora_message.py  enhance_clean_repo.py  extract_lora_sdr_vectors.py  extract_specific_vectors.py  fix_comprehensive_vectors.py  fix_vector_generation.py  full_lora_decoder.py  generate_baseline_vectors.py  generate_comprehensive_vectors.py  generate_comprehensive_vectors_v2.py  generate_lora_phy_vectors.py  generate_reference_vectors.py  generate_vectors.sh  interpret_decoded_data.py  load_test_vectors.py  scan_allocs.sh  search_text_in_message.py  test_lightweight_lora.py  test_unknown_file_with_original_lora.py  use_original_lora_sdr_decoder.py  validate_against_reference.py  validate_binary_vectors.py  validate_comprehensive_vectors.py  validate_fixed_vectors.py  validate_modulation_vectors.py  validate_vectors_with_sublmodule.py  validate_with_original_lora_sdr.py
src/lorawan/: lorawan.cpp
src/phy/: LoRaDecoder.cpp  LoRaDemod.cpp  LoRaEncoder.cpp  LoRaMod.cpp  phy.cpp
tests/: alloc_tracker.h  awgn_sweep.py  awgn_sweep_gtest.cpp  bit_exact_test.cpp  e2e_chain_test.cpp  equal_power_bin_test.cpp  gr_lora_sdr_interop.cpp  hamming_cross_check.cpp  lorawan_roundtrip.py  lorawan_roundtrip_gtest.cpp  no_alloc_test.cpp  performance_test.cpp  profiles.yaml  roundtrip_test.cpp  sync_word_test.cpp  test_main.cpp  whitening_test.cpp
vectors/: README.md
vectors/lora_phy/sf7_bw125_hann/: decoded.bin.b64  deinterleave.csv.b64  demod_symbols.csv.b64  iq_samples.csv.b64  manifest.json
vectors/lora_phy/sf7_bw125_nowin/: decoded.bin.b64  deinterleave.csv.b64  demod_symbols.csv.b64  manifest.json  payload.bin.b64
vectors/lora_phy/sf7_bw250_hann/: decoded.bin.b64  iq_samples.csv.b64  manifest.json
vectors/lora_phy/sf7_bw250_nowin/: deinterleave.csv.b64  demod_symbols.csv.b64
vectors/lora_phy/sf7_bw500_hann/: deinterleave.csv.b64  demod_symbols.csv.b64  iq_samples.csv.b64
vectors/lora_phy/sf7_bw500_nowin/: decoded.bin.b64  manifest.json  post_interleave.csv.b64  pre_interleave.csv.b64
vectors/lora_phy_baseline/: .gitignore
vectors/lora_phy_baseline/sf7/: demod_symbols.csv  iq_samples.csv  manifest.json  symbols.csv
